chore: Fix sonatype complaints